--- a/index.html
+++ b/index.html
@@ -1,45 +1,56 @@
 <!DOCTYPE html>
 <html lang="es">
-<head> 
+<head>
+    <title>JUJUTSU KAISEN ULTIMATE(JJKU)Wiki</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuphead all of it</title>
-     <link rel="stylesheet" href="Cotilla/Estilo.css">
-    <meta name="descripción" content="Encuentra cualquier curiosidad, guia o dato de personaje/arma que busques sobre el juego de las tazas">
-    <link rel="shortcut icon" href="Cotilla/favicon.ico">
-    <meta name="robots" content="index-follow">
-    <meta property="og:title" content="Título para redes sociales">    
-    <meta property="og:image" content="Cotilla/favicon.ico">
-    <meta property="og:url" content="https://crades12.github.io">
- </head> 
- <body>
-     <header id="Inicio">
-        <h1>Dark</h1> 
-          
-        <nav>
-            <ol> <a href="Preguntas"></a>
-             <li>
-                 <a href="¿Que es Dark Souls?">¿Que es ?</a>
-                     <ul> <li>
-                        <a href="Creción">Creación</a></li>
-                     <li>
-                       <a href="lore">Lore</a></li>
-                       <li><a href="genero">Género</a></li>
-                     </ul>
-             <li>
-                 <a href="Es dificil">¿Es un juego dificil?</a>
-             </li>
-             <li><a href="Cotilla/Paginas del resto.html">Páginas aliadas</a></li>
-            </ol>
-        </nav>
-
-     </header> 
-     <main>
-
-     </main> 
-     <footer>
+    <meta name="description" content="En esta web encontraras todos los datos necesarios para disfrutar del addon de JJKU">
+    <meta name="keywords" content="">
+    <meta name="copyright" content="Abel González">
+    <meta name="author" content="Abel González">
+    <meta name="language" content="spanish">
+    <meta name="robots" content="index,follow">
+    <meta property="og:title" content="JUJUTSU KAISEN ULTIMATE (JJKU)Wiki">
+    <meta property="og:description" content="En esta web encontraras todos los datos necesarios para disfrutar del addon de JJKU">
+    <meta property="og:image" content="index/favicon">
+    <meta property="og:url" content="https://Crades12.github.io/">
+    <link rel="stylesheet" href="index/main.css">
+    <link rel="shortcut icon" href="index/favicon.ico" type="image/x-icon">
+    <link rel="canonical" href="https://Crades12.github.io">
+</head>
+<body><hr>
+    <header><h1>JUJUTSU KAISEN ULTIMATE</h1></header>
+    <nav><ul>
+        <li><a href="index.html">INICIO</a> |</li>
+        <li>CONTACTO |</li>
+        <li><a href="index/Paginas/Paginas-aliadas.html">PAGINAS AMIGAS</a></li>
+    </ul></nav>
+    <hr>
+    <main>
+        <tr>
+        <td>
+            <figure><a href="index/Extensiones/Extensiones.html">
+                <img src="index/logro-extension.webp" alt="Imagen de Extensiones ">
+                <figcaption>Extensiones</figcaption></a>
+            </figure>
+        </td>
+        <td>
+            <figure><a href="index/Clanes/Clanes.html">
+                <img src="index/casa-zenini.webp" alt="casa zenin">
+                <figcaption>Clanes</figcaption></a>
+            </figure>
+        </td>
+        </tr>
         
-             &copy;Abel González Guerra 2025
-     </footer>
+        <tr>
+        <td>
+            <figure><a href="index/Razas-Votos/Razas-y-Votos.html">
+                <img src="index/raza.png" alt="Imagen de las maldiciones">
+                <figcaption>Razas</figcaption></a>
+            </figure>
+        </td>
+    </tr>
+    </main>
+    <footer>&copy;Abel González</footer>
 </body>
 </html>
