--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <link rel="shortcut icon" href="index/favicon.ico" type="image/x-icon">
     <link rel="canonical" href="https://Crades12.github.io">
 </head>
-<body><hr>
+<body>
     <header><h1>JUJUTSU KAISEN ULTIMATE</h1></header>
     <nav><ul>
         <li><a href="index.html">INICIO</a> |</li>
         <li>CONTACTO |</li>
         <li><a href="index/Paginas/Paginas-aliadas.html">PAGINAS AMIGAS</a></li>
     </ul></nav>
-    <hr>
+    
     <main>
         <tr>
         <td>
