--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <meta property="og:title" content="JUJUTSU KAISEN ULTIMATE (JJKU)Wiki">
     <meta property="og:description" content="En esta web encontraras todos los datos necesarios para disfrutar del addon de JJKU">
     <meta property="og:image" content="index/favicon">
-    <meta property="og:url" content="https://Crades12.github.io/">
+    <meta property="og:url" content="https://crades12.github.io/">
     <link rel="stylesheet" href="index/main.css">
     <link rel="shortcut icon" href="index/favicon.ico" type="image/x-icon">
-    <link rel="canonical" href="https://Crades12.github.io">
+    <link rel="canonical" href="https://crades12.github.io/">
 </head>
 <body>
     <header><h1>JUJUTSU KAISEN ULTIMATE</h1></header>
