--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="En esta web encontraras todos los datos necesarios para disfrutar del addon de JJKU">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="jjku, JJKU, jujutsu, jujutsu kaisen, extensiones, clanes, razas, jujutsu ultimate, jujutsu kaisen ultimate, votos vinculantes, gojo, sukuna, addon, mod, minecraft, addon jujutsu, addon jjcraft, mod jjku, addon minecraft, jjcraft, jujutsu craft, sukuna, toji, geto, kenny, kenjaku, grados, awakenings, awakenings jujutsu, black flash, potencial, profesiones, hechizero">
     <meta name="copyright" content="Abel González">
     <meta name="author" content="Abel González">
     <meta name="language" content="spanish">
