--- a/index/Clanes/Clanes.html
+++ b/index/Clanes/Clanes.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <header>
+    <a href="../../index.html">⬅️INICIO</a>
     <hr>
     <h1>Clanes</h1>
         <hr>
@@ -202,7 +203,8 @@
 
 </main>
 <footer>
-
+<a href="../../index.html">⬅️INICIO</a>
+    &copy;Abel González
 </footer>
 </body>
 </html>
