--- a/index/Razas-Votos/Razas-y-Votos.html
+++ b/index/Razas-Votos/Razas-y-Votos.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <a href="../../index.html">⬅️INICIO</a>
         <hr>
         <h1>Razas y Votos</h1>
         <hr>
@@ -105,7 +106,8 @@
         <hr>       
     </main>
     <footer>
-        <a href="">INICIO</a>
+        <a href="../../index.html">⬅️INICIO</a>
+    &copy;Abel González
     </footer>
 </body>
 </html>
