--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:image" content="index/favicon">
     <meta property="og:url" content="https://crades12.github.io/">
     <link rel="stylesheet" href="index/main.css">
-    <link rel="shortcut icon" href="index/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="index/favicon.ico" type="image/x-icon">
     <link rel="canonical" href="https://crades12.github.io/">
 </head>
 <body>
@@ -53,4 +53,5 @@
     </main>
     <footer>&copy;Abel González</footer>
 </body>
+
 </html>
