--- a/index.html
+++ b/index.html
@@ -1,55 +1,69 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <title>JUJUTSU KAISEN ULTIMATE(JJKU)Wiki</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="En esta web encontraras todos los datos necesarios para disfrutar del addon de JJKU">
-    <meta name="keywords" content="jjku, JJKU, jujutsu, jujutsu kaisen, extensiones, clanes, razas, jujutsu ultimate, jujutsu kaisen ultimate, votos vinculantes, gojo, sukuna, addon, mod, minecraft, addon jujutsu, addon jjcraft, mod jjku, addon minecraft, jjcraft, jujutsu craft, sukuna, toji, geto, kenny, kenjaku, grados, awakenings, awakenings jujutsu, black flash, potencial, profesiones, hechizero">
+    <meta name="description"
+        content="En esta web encontraras todos los datos necesarios para disfrutar del addon de JJKU">
+    <meta name="keywords"
+        content="jjku, JJKU, jujutsu, jujutsu kaisen, extensiones, clanes, razas, jujutsu ultimate, jujutsu kaisen ultimate, votos vinculantes, gojo, sukuna, addon, mod, minecraft, addon jujutsu, addon jjcraft, mod jjku, addon minecraft, jjcraft, jujutsu craft, sukuna, toji, geto, kenny, kenjaku, grados, awakenings, awakenings jujutsu, black flash, potencial, profesiones, hechizero">
     <meta name="copyright" content="Abel González">
     <meta name="author" content="Abel González">
     <meta name="language" content="spanish">
     <meta name="robots" content="index,follow">
     <meta property="og:title" content="JUJUTSU KAISEN ULTIMATE (JJKU)Wiki">
-    <meta property="og:description" content="En esta web encontraras todos los datos necesarios para disfrutar del addon de JJKU">
+    <meta property="og:description"
+        content="En esta web encontraras todos los datos necesarios para disfrutar del addon de JJKU">
     <meta property="og:image" content="index/favicon">
     <meta property="og:url" content="https://crades12.github.io/">
     <link rel="stylesheet" href="index/main.css">
     <link rel="icon" href="index/favicon.ico" type="image/x-icon">
     <link rel="canonical" href="https://crades12.github.io/">
 </head>
+
 <body>
-    <header><h1>JUJUTSU KAISEN ULTIMATE</h1></header>
-    <nav><ul>
-        <li><a href="index.html">INICIO</a> |</li>
-        <li>CONTACTO |</li>
-        <li><a href="index/Paginas/Paginas-aliadas.html">PAGINAS AMIGAS</a></li>
-    </ul></nav>
-    
+    <header>
+        <h1>JUJUTSU KAISEN ULTIMATE</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">INICIO</a> |</li>
+            <li>CONTACTO |</li>
+            <li><a href="index/Paginas/Paginas-aliadas.html">PAGINAS AMIGAS</a></li>
+        </ul>
+    </nav>
+
     <main>
-        <tr>
-        <td>
-            <figure><a href="index/Extensiones/Extensiones.html">
-                <img src="index/logro-extension.webp" alt="Imagen de Extensiones ">
-                <figcaption>Extensiones</figcaption></a>
-            </figure>
-        </td>
-        <td>
-            <figure><a href="index/Clanes/Clanes.html">
-                <img src="index/casa-zenini.webp" alt="casa zenin">
-                <figcaption>Clanes</figcaption></a>
-            </figure>
-        </td>
-        </tr>
-        
-        <tr>
-        <td>
-            <figure><a href="index/Razas-Votos/Razas-y-Votos.html">
-                <img src="index/raza.png" alt="Imagen de las maldiciones">
-                <figcaption>Razas</figcaption></a>
-            </figure>
-        </td>
-    </tr>
+        <table>
+            <tr>
+                <td>
+                    <figure><a href="index/Extensiones/Extensiones.html">
+                            <img src="index/logro-extension.webp" alt="Imagen de Extensiones ">
+                            <figcaption>Extensiones</figcaption>
+                        </a>
+                    </figure>
+                </td>
+                <td>
+                    <figure><a href="index/Clanes/Clanes.html">
+                            <img src="index/casa-zenini.webp" alt="casa zenin">
+                            <figcaption>Clanes</figcaption>
+                        </a>
+                    </figure>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <figure><a href="index/Razas-Votos/Razas-y-Votos.html">
+                            <img src="index/raza.png" loading="lazy" alt="Imagen de las maldiciones">
+                            <figcaption>Razas</figcaption>
+                        </a>
+                    </figure>
+                </td>
+            </tr>
+        </table>
     </main>
     <footer>&copy;Abel González</footer>
 </body>
