--- a/index/Paginas/Paginas-aliadas.html
+++ b/index/Paginas/Paginas-aliadas.html
@@ -23,7 +23,7 @@
             <a href="https://alexwater2.github.io/">https://alexwater2.github.io/</a>
         </main>
         <footer>
-
+&copy;Abel González
         </footer>
 
     </body>
