--- a/index/Extensiones/Extension-inumaki/Extension-inumaki.html
+++ b/index/Extensiones/Extension-inumaki/Extension-inumaki.html
@@ -22,6 +22,7 @@
         <hr>
     </main>
     <footer><a href="../../../index.html">⬅️INICIO</a>
-    <a href="../Extensiones.html">⬅️Atras</a></footer>
+    <a href="../Extensiones.html">⬅️Atras</a>
+&copy;Abel González</footer>
 </body>
 </html>
