--- a/index/Extensiones/Extension-itadori/Extension-Itadori.html
+++ b/index/Extensiones/Extension-itadori/Extension-Itadori.html
@@ -30,6 +30,8 @@
        <hr>
     </main>
     <footer><a href="../../../index.html">⬅️INICIO</a>
-    <a href="../Extensiones.html">⬅️Atras</a></footer>
+    <a href="../Extensiones.html">⬅️Atras</a>
+    &copy;Abel González
+</footer>
 </body>
 </html>
