--- a/index/Razas-Votos/Razas-y-Votos.html
+++ b/index/Razas-Votos/Razas-y-Votos.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Razas.css">
     <title>Razas_y_Votos(jjku)</title>
-    
-    
+
+
 </head>
+
 <body>
     <header>
         <a href="../../index.html">⬅️INICIO</a>
@@ -15,99 +17,168 @@
         <h1>Razas y Votos</h1>
         <hr>
         <nav>
+            <ul>
+                <a href="#razas">
+                    <li class="nav">Razas</li>
+                </a>
                 <ul>
-                <a href="#razas"><li class="nav">Razas</li></a>
+                    <a href="#jujutsu">
+                        <li class="nav">Hechicero de jujutsu</li>
+                    </a>
+                    <a href="#espiritu">
+                        <li class="nav">Espíritu maldito</li>
+                    </a>
+                    <a href="#reencarnado">
+                        <li class="nav">Hechicero Reencarnado</li>
+                    </a>
+                </ul>
+                <a href="#subraza">
+                    <li class="nav">Subrazas</li>
+                </a>
                 <ul>
-                <a href="#jujutsu"><li class="nav">Hechicero de jujutsu</li></a>
-                <a href="#espiritu"><li class="nav">Espíritu maldito</li></a>
-                <a href="#reencarnado"><li class="nav">Hechicero Reencarnado</li></a>
+                    <a href="#pintura">
+                        <li class="nav">Pintura de la muerte</li>
+                    </a>
+                    <a href="#desastre">
+                        <li class="nav">Maldición de desastre</li>
+                    </a>
+                    <a href="#perfecto">
+                        <li class="nav">Recipiente Perfecto</li>
+                    </a>
+                    <a href="#tengen">
+                        <li class="nav">Tengen</li>
+                    </a>
                 </ul>
-                <a href="#subraza"><li class="nav">Subrazas</li></a>
+                <a href="#votos">
+                    <li class="nav">Votos vinculantes</li>
+                </a>
                 <ul>
-                <a href="#pintura"><li class="nav">Pintura de la muerte</li></a>
-                <a href="#desastre"><li class="nav">Maldición de desastre</li></a>
-                <a href="#perfecto"><li class="nav">Recipiente Perfecto</li></a>
-                <a href="#tengen"><li class="nav">Tengen</li></a>
+                    <a href="#poder">
+                        <li class="nav">Poder</li>
+                    </a>
+                    <a href="#output">
+                        <li class="nav">Output</li>
+                    </a>
+                    <a href="#energia">
+                        <li class="nav">Nivel de Energia maldita</li>
+                    </a>
+                    <a href="#salud">
+                        <li class="nav">Salud</li>
+                    </a>
                 </ul>
-                <a href="#votos"><li class="nav">Votos vinculantes</li></a>
-                <ul>
-                <a href="#poder"><li class="nav">Poder</li></a>
-                <a href="#output"><li class="nav">Output</li></a>
-                <a href="#energia"><li class="nav">Nivel de Energia maldita</li></a>
-                <a href="#salud"><li class="nav">Salud</li></a>
-                </ul>
-                </ul>
+            </ul>
         </nav>
     </header>
     <main>
         <section>
-        <article>
-        <h2 id="razas">
-            Razas
-        </h2>
-        <figure><img src="Razas.webp" alt="Imagen con todas las razas"></figure>
-        <p>-En Jujutsu Kaisen Ultimate, la selección de raza tiene una profunda importancia estratégica, dando forma a la experiencia de juego de manera significativa. Los jugadores deben considerar cuidadosamente los atributos y habilidades únicas asociados con cada raza antes de hacer su selección</p>
-        <ul>
-        <li id="jujutsu">Hechicero de jujutsu</li>
-        <p>Al poseer un gran potencial, a los brujos del Jujutsu les resulta más fácil aprender técnicas específicas dentro del mundo del juego. Se benefician de la regeneración pasiva de energía maldita a intervalos regulares.</p>
-        <li id="espiritu">Espíritu maldito</li>
-        <p>Los espíritus malditos disfrutan de la regeneración pasiva de la salud, la potencia de qué escalas se basan en sus calificaciones dentro del juego. Además, exhiben regeneración pasiva de energía maldita. (no podrán usar RCT)</p>
-        <li id="reencarnado">Hechicero Reencarnado</li>
-        <p>Atributos más fuertes. Su energía maldita se regenera en correlación con el daño que infligen a los enemigos.</p>
-        </ul>
-        </article>
-       </section>
+            <article>
+                <h2 id="razas">
+                    Razas
+                </h2>
+                <figure><img src="Razas.webp" alt="Imagen con todas las razas"></figure>
+                <p>-En Jujutsu Kaisen Ultimate, la selección de raza tiene una profunda importancia estratégica, dando
+                    forma a la experiencia de juego de manera significativa. Los jugadores deben considerar
+                    cuidadosamente los atributos y habilidades únicas asociados con cada raza antes de hacer su
+                    selección</p>
+                <ul>
+                    <li id="jujutsu">Hechicero de jujutsu</li>
+                    <p>Al poseer un gran potencial, a los brujos del Jujutsu les resulta más fácil aprender técnicas
+                        específicas dentro del mundo del juego. Se benefician de la regeneración pasiva de energía
+                        maldita a intervalos regulares.</p>
+                    <li id="espiritu">Espíritu maldito</li>
+                    <p>Los espíritus malditos disfrutan de la regeneración pasiva de la salud, la potencia de qué
+                        escalas se basan en sus calificaciones dentro del juego. Además, exhiben regeneración pasiva de
+                        energía maldita. (no podrán usar RCT)</p>
+                    <li id="reencarnado">Hechicero Reencarnado</li>
+                    <p>Atributos más fuertes. Su energía maldita se regenera en correlación con el daño que infligen a
+                        los enemigos.</p>
+                </ul>
+            </article>
+        </section>
         <section>
-        <article>
-        <h2 id="subrazas">
-            Subrazas
-        </h2>
-        <figure><img src="Death-Paintings.webp" alt="Imgena de todas las pinturas de la muerte"></figure>
-        <p>-Las subrazas son distintas de las razas y ocupan una categoría separada. A diferencia de las razas, los Subraces no se pueden adquirir a través del objeto Race Changer. En cambio, requieren condiciones específicas o artículos para la adquisición.</p>
-        <ul>
-        <li id="pintura">Pintura de la muerte</li>
-        <p>La pintura de la muerte se puede obtener consumiendo las pinturas de la muerte</p>
-        <p>La raza de pintura de muerte es inmune a la pérdida de extremidades y no puede verse afectada por efectos negativos como debilidad, náuseas o lentitud</p>
-        <li id="desastre">Maldiciones de desastre</li>
-        <p> Solo para la raza Espíritu Maldito. Obtenido con una oportunidad después de matar a Mahito o Jogo</p>
-        <p>Otorga el efecto Regeneración 4 y el acceso a los despertares para técnicas de maldición de desastres (Mahito, Jogo, Hanami). Aumenta el nivel de salida y proporciona ECA pasiva: Burnout sin causar daño cerebral.</p>
-        <li id="perfecto">Recipiente Perfecto</li>
-       <ul>
-        <li>La oportunidad aleatoria de obtener este subraza cuando te unes al mundo, impulsa el daño con ciertas Técnicas Malditas como Itadori, Uro, Ishigori, Kurourushi, Angel, Kashimo, Dhruv y Uraume.</li>
-        <li>Le da una mayor probabilidad (%) de éxito cuando come un dedo de sukuna</li>
-        <li>Un truco especial para la técnica de la bestia mítica de ámbar (Kashimo) maldita, la bestia mítica, el ámbar no te mata si se deshabilita después de la expansión del dominio o la escalera de Jacob</li>
-       </ul>
-        <li id="tengen">Tengen</li>
-        <p>Obtenido con una oportunidad después de consumir el objeto Tengen (obtenible tras matar a sukuna heian era)</p>
-        <p>Concede la inmortalidad al jugador. Las turbas hostiles no serán agresivas para ti, y nada puede golpearte. Todavía puede atacar a las turbas mientras sea Tengen, sin embargo, no recibirá crédito por matar a ninguna turba en absoluto, lo que le impedirá obtener recompensas. Tengen no puede causar ningún daño y no puede dañarse también.</p>
-        </ul></article></section>
+            <article>
+                <h2 id="subrazas">
+                    Subrazas
+                </h2>
+                <figure><img src="Death-Paintings.webp" loading="lazy" alt="Imgena de todas las pinturas de la muerte">
+                </figure>
+                <p>-Las subrazas son distintas de las razas y ocupan una categoría separada. A diferencia de las razas,
+                    los Subraces no se pueden adquirir a través del objeto Race Changer. En cambio, requieren
+                    condiciones específicas o artículos para la adquisición.</p>
+                <ul>
+                    <li id="pintura">Pintura de la muerte</li>
+                    <p>La pintura de la muerte se puede obtener consumiendo las pinturas de la muerte</p>
+                    <p>La raza de pintura de muerte es inmune a la pérdida de extremidades y no puede verse afectada por
+                        efectos negativos como debilidad, náuseas o lentitud</p>
+                    <li id="desastre">Maldiciones de desastre</li>
+                    <p> Solo para la raza Espíritu Maldito. Obtenido con una oportunidad después de matar a Mahito o
+                        Jogo</p>
+                    <p>Otorga el efecto Regeneración 4 y el acceso a los despertares para técnicas de maldición de
+                        desastres (Mahito, Jogo, Hanami). Aumenta el nivel de salida y proporciona ECA pasiva: Burnout
+                        sin causar daño cerebral.</p>
+                    <li id="perfecto">Recipiente Perfecto</li>
+                    <ul>
+                        <li>La oportunidad aleatoria de obtener este subraza cuando te unes al mundo, impulsa el daño
+                            con ciertas Técnicas Malditas como Itadori, Uro, Ishigori, Kurourushi, Angel, Kashimo, Dhruv
+                            y Uraume.</li>
+                        <li>Le da una mayor probabilidad (%) de éxito cuando come un dedo de sukuna</li>
+                        <li>Un truco especial para la técnica de la bestia mítica de ámbar (Kashimo) maldita, la bestia
+                            mítica, el ámbar no te mata si se deshabilita después de la expansión del dominio o la
+                            escalera de Jacob</li>
+                    </ul>
+                    <li id="tengen">Tengen</li>
+                    <p>Obtenido con una oportunidad después de consumir el objeto Tengen (obtenible tras matar a sukuna
+                        heian era)</p>
+                    <p>Concede la inmortalidad al jugador. Las turbas hostiles no serán agresivas para ti, y nada puede
+                        golpearte. Todavía puede atacar a las turbas mientras sea Tengen, sin embargo, no recibirá
+                        crédito por matar a ninguna turba en absoluto, lo que le impedirá obtener recompensas. Tengen no
+                        puede causar ningún daño y no puede dañarse también.</p>
+                </ul>
+            </article>
+        </section>
         <section>
-        <article>
-        <h2 id="votos">
-        Votos vinculantes
-        </h2>
-        <p>-Los votos vinculantes son considerados por todos los usuarios de jujutsu como uno de los principios esenciales de la hechicería de jujutsu. Los votos vinculantes son esencialmente contratos creados a través de la energía maldita que un individuo puede hacer con uno mismo u otra persona. El acto de cumplir con las reglas y restricciones acordadas en estos contratos puede resultar en un mayor poder o el logro de un objetivo, pero romper un voto vinculante tiene repercusiones extrañas. Tenga cuidado en cuanto al uso de votos vinculantes le dará nerfs permanentes. (morir no los restablecerá)</p>
-        <figure><img src="votos.webp" alt="imagen de los votos vinculantes"></figure>
-        <ul>
-            <li id="poder">Poder</li>
-            <p>Buff: Te da mucha más fuerza. Usted hace alrededor de 4 veces de daño durante 8 minutos después del primer uso. Si se apila con un segundo uso le otorga alrededor de 55x de daño. Si se apila 3 veces se hace alrededor de 110 veces el daño. Puede usar hasta 10 veces, entonces ya no se puede apilar.
-            Debuff permanente: Si se usa una vez que la pérdida de daño es insignificante, sin embargo, si se usa para las 10 pilas completas, básicamente no puede dañar a las entidades con sus ataques básicos y puede hacer muy poco daño con su técnica.</p>
-            <li id="output">Output</li>
-            <p>Buff: Otorga un aficionado en tu salida
-            Debuff permanente: Incapaz de llegar al 120% potencial. Cada golpe que recibas tiene la oportunidad de infligir 2x de daño</p>
-            <li id="energia">Nivel de Energia maldita</li>
-            <p>    Buff: Da 100 niveles de Energia maldita.
-            Debuff permanente: Su progresión se vuelve más lenta (se ralentiza cada uso) y la muerte limpia su inventario.</p>
-            <li id="salud">Salud</li>
-            <p>Aficionado: Otorga la resistencia del usuario 10 que ahora no puede no poder recibir daño durante 2 minutos 30 segundos
-            Debuff permanente: El usuario hace un 10% menos de daño</p>
-        </ul> </article>
-    </section>   
-        <hr>       
+            <article>
+                <h2 id="votos">
+                    Votos vinculantes
+                </h2>
+                <p>-Los votos vinculantes son considerados por todos los usuarios de jujutsu como uno de los principios
+                    esenciales de la hechicería de jujutsu. Los votos vinculantes son esencialmente contratos creados a
+                    través de la energía maldita que un individuo puede hacer con uno mismo u otra persona. El acto de
+                    cumplir con las reglas y restricciones acordadas en estos contratos puede resultar en un mayor poder
+                    o el logro de un objetivo, pero romper un voto vinculante tiene repercusiones extrañas. Tenga
+                    cuidado en cuanto al uso de votos vinculantes le dará nerfs permanentes. (morir no los restablecerá)
+                </p>
+                <figure><img src="votos.webp" loading="lazy" alt="imagen de los votos vinculantes"></figure>
+                <ul>
+                    <li id="poder">Poder</li>
+                    <p>Buff: Te da mucha más fuerza. Usted hace alrededor de 4 veces de daño durante 8 minutos después
+                        del primer uso. Si se apila con un segundo uso le otorga alrededor de 55x de daño. Si se apila 3
+                        veces se hace alrededor de 110 veces el daño. Puede usar hasta 10 veces, entonces ya no se puede
+                        apilar.
+                        Debuff permanente: Si se usa una vez que la pérdida de daño es insignificante, sin embargo, si
+                        se usa para las 10 pilas completas, básicamente no puede dañar a las entidades con sus ataques
+                        básicos y puede hacer muy poco daño con su técnica.</p>
+                    <li id="output">Output</li>
+                    <p>Buff: Otorga un aficionado en tu salida
+                        Debuff permanente: Incapaz de llegar al 120% potencial. Cada golpe que recibas tiene la
+                        oportunidad de infligir 2x de daño</p>
+                    <li id="energia">Nivel de Energia maldita</li>
+                    <p> Buff: Da 100 niveles de Energia maldita.
+                        Debuff permanente: Su progresión se vuelve más lenta (se ralentiza cada uso) y la muerte limpia
+                        su inventario.</p>
+                    <li id="salud">Salud</li>
+                    <p>Aficionado: Otorga la resistencia del usuario 10 que ahora no puede no poder recibir daño durante
+                        2 minutos 30 segundos
+                        Debuff permanente: El usuario hace un 10% menos de daño</p>
+                </ul>
+            </article>
+        </section>
+        <hr>
     </main>
     <footer>
         <a href="../../index.html">⬅️INICIO</a>
-    &copy;Abel González
+        &copy;Abel González
     </footer>
 </body>
+
 </html>
