--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta property="og:url" content="https://crades12.github.io/">
     <link rel="stylesheet" href="index/main.css">
     <link rel="icon" href="index/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="index/favicon2.webp" type="image/webp">
     <link rel="canonical" href="https://crades12.github.io/">
 </head>
 
@@ -40,7 +41,7 @@
             <tr>
                 <td>
                     <figure><a href="index/Extensiones/Extensiones.html">
-                            <img src="index/logro-extension.webp" alt="Imagen de Extensiones ">
+                            <img src="index/logro-extension.webp" alt="Imagen de Gojo ejecutando un rojo ">
                             <figcaption>Extensiones</figcaption>
                         </a>
                     </figure>
@@ -58,8 +59,8 @@
             <tr>
                 <td>
                     <figure><a href="index/Razas-Votos/Razas-y-Votos.html">
-                            <img src="index/raza.png" loading="lazy" alt="Imagen de las maldiciones">
-                            <figcaption>Razas</figcaption>
+                            <img src="index/raza.png" loading="lazy" alt="Imagen de hanami">
+                            <figcaption>Razas y Votos</figcaption>
                         </a>
                     </figure>
                 </td>
