--- a/index/Extensiones/Extension-inumaki/Extension-inumaki.html
+++ b/index/Extensiones/Extension-inumaki/Extension-inumaki.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Global Extension.css">
+        <link rel="icon" href="../../favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../favicon2.webp" type="image/webp">
     <title>Extension-inumaki</title>
     
 </head>
