--- a/index/Extensiones/Extensiones.html
+++ b/index/Extensiones/Extensiones.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Ext.css">
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../favicon2.webp" type="image/webp">
     <title>Extensiones(jjku)</title>
 </head>
 
@@ -23,6 +25,7 @@
         <table>
             <thead></thead>
             <tfoot></tfoot>
+            
             <tbody>
                 <tr>
                     <td>
