--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 </td>
             </tr>
         </table>
+        <p><a href="index/Mod_base/jujutsu-craft.html">Jujutsu craft</a></p>
     </main>
     <footer>&copy;Abel González</footer>
 </body>
