--- a/index/Mod_base/GGA.html
+++ b/index/Mod_base/GGA.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gege Akutami</title>
+    <link rel="stylesheet" href="">
+    <link rel="icon" href="index/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="index/favicon2.webp" type="image/webp">
+    <link rel="canonical" href="https://crades12.github.io/">
 </head>
 
 <body>
