--- a/index/Mod_base/Jujutsu-kaisen.html
+++ b/index/Mod_base/Jujutsu-kaisen.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jujutsu kaisen</title>
     <link rel="stylesheet" href="">
+    <link rel="icon" href="index/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="index/favicon2.webp" type="image/webp">
+    <link rel="canonical" href="https://crades12.github.io/">
 </head>
 <body>
     <header><h1>Jujutsi kaisen</h1></header>
