--- a/index/Mod_base/jujutsu-craft.html
+++ b/index/Mod_base/jujutsu-craft.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jujutsu craft</title>
     <link rel="stylesheet" href="jjc.css">
+    <link rel="icon" href="index/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="index/favicon2.webp" type="image/webp">
+    <link rel="canonical" href="https://crades12.github.io/">
 </head>
 <body>
     <header>
