--- a/index/Mod_base/Jujutsu-kaisen.html
+++ b/index/Mod_base/Jujutsu-kaisen.html
@@ -12,6 +12,9 @@
 <body>
     <header><h1>Jujutsi kaisen</h1></header>
     <img src="jjk.webp" alt="">
+            <hr>
+        <a href="../../index.html">#</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="jujutsu-craft.html">Jujutsu Craft</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Jujutsu-kaisen.html">Jujutsu kaisen</a>
+        <hr>
     <main>
         <h2>¿Que es?</h2>
         <p>Jujutsu kaisen una serie de manga japonés escrita e ilustrada por <a href="GGA.html">Gege Akutami</a>.</p>
