--- a/index/Mod_base/jujutsu-craft.html
+++ b/index/Mod_base/jujutsu-craft.html
@@ -13,6 +13,9 @@
     <header>
         <h1>Jujutsu craft</h1>
         <img src="jjc.webp" alt="">
+        <hr>
+        <a href="../../index.html">#</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="jujutsu-craft.html">Jujutsu Craft</a>
+        <hr>
     </header>
     <main>
         <h2>¿Que es?</h2>
