--- a/index/Mod_base/GGA.html
+++ b/index/Mod_base/GGA.html
@@ -16,7 +16,7 @@
         <h1>Autor</h1>
         <img src="gg.webp" alt="">
                 <hr>
-        <a href="../../index.html">#</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="jujutsu-craft.html">Jujutsu Craft</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Jujutsu-kaisen.html">Jujutsu kaisen</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="GGA.html">Gege Akutami</a>
+        <a href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="jujutsu-craft.html">Jujutsu Craft</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Jujutsu-kaisen.html">Jujutsu kaisen</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="GGA.html">Gege Akutami</a>
         <hr>
     </header>
     <main>
