--- a/index/Mod_base/jujutsu-craft.html
+++ b/index/Mod_base/jujutsu-craft.html
@@ -14,12 +14,12 @@
         <h1>Jujutsu craft</h1>
         <img src="jjc.webp" alt="">
         <hr>
-        <a href="../../index.html">#</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="jujutsu-craft.html">Jujutsu Craft</a>
+        <a href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="jujutsu-craft.html">Jujutsu Craft</a>
         <hr>
     </header>
     <main>
         <h2>¿Que es?</h2>
-        <p>Jujutsu craft (jjc) es un mod sin ánimo de lucro, creado por los fanáticos, creado para el disfrute de la comunidad, esta basado en el famoso anime <a href="Jujutsu-kaisen.html">Jujutsu kaisen</a>.</p>
+        <p>Jujutsu craft es un mod sin ánimo de lucro, creado por los fanáticos, creado para el disfrute de la comunidad, esta basado en el famoso anime <a href="Jujutsu-kaisen.html">Jujutsu kaisen</a>.</p>
         <h2>Transformación</h2>
         <p>Jujutsu Craft Mod transforma tu mundo de Minecraft en un dominio peligroso infestado de espíritus malditos.
 
