--- a/index/Mod_base/GGA.html
+++ b/index/Mod_base/GGA.html
@@ -9,6 +9,39 @@
     <link rel="icon" href="index/favicon.ico" type="image/x-icon">
     <link rel="icon" href="index/favicon2.webp" type="image/webp">
     <link rel="canonical" href="https://crades12.github.io/">
+        <script type="application/ld+json" >
+        {
+        "@context":"https://crades12.github.io/",
+        "@type":"BreadcrumbList",
+        "itemListElement":[
+             {
+                "@type":"Listlitem",
+                "position":1,
+                "name":"Inicio",
+                "item":"https://crades12.github.io/"
+            },
+            {
+                "@type":"Listlitem",
+                "position":2,
+                "name":"Jujutsu Craft",
+                "item":"https://crades12.github.io/index/Mod_base/jujutsu-craft.html"
+            },
+            {
+                "@type":"Listlitem",
+                "position":3,
+                "name":"JUjutsu kaisen",
+                "item":"https://crades12.github.io/index/Mod_base/Jujutsu-kaisen.html"
+            },
+           
+            {
+                "@type":"Listlitem",
+                "position":4,
+                "name":"Gege akutami",
+                "item":"https://crades12.github.io/index/Mod_base/GGA.html"
+            },
+        ]
+        }
+    </script>
 </head>
 
 <body>
