--- a/index/Mod_base/jujutsu-craft.html
+++ b/index/Mod_base/jujutsu-craft.html
@@ -8,6 +8,25 @@
     <link rel="icon" href="index/favicon.ico" type="image/x-icon">
     <link rel="icon" href="index/favicon2.webp" type="image/webp">
     <link rel="canonical" href="https://crades12.github.io/">
+            <script type="application/ld+json" >
+        {
+        "@context":"https://crades12.github.io/",
+        "@type":"BreadcrumbList",
+        "itemListElement":[
+             {
+                "@type":"Listlitem",
+                "position":1,
+                "name":"Inicio",
+                "item":"https://crades12.github.io/"
+            },
+            {
+                "@type":"Listlitem",
+                "position":2,
+                "name":"Jujutsu Craft",
+                "item":"https://crades12.github.io/index/Mod_base/jujutsu-craft.html"
+            },
+        ]
+        }
 </head>
 <body>
     <header>
