--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
     <link rel="icon" href="index/favicon.ico" type="image/x-icon">
     <link rel="icon" href="index/favicon2.webp" type="image/webp">
     <link rel="canonical" href="https://crades12.github.io/">
+    <script type="application/ld+json" >
+        {
+        "@context":"https://crades12.github.io/",
+        "@type":"BreadcrumbList",
+        "itemListElement":[
+            {
+                "@type":"Listlitem",
+                "position":1,
+                "name":"Inicio",
+                "item":"https://crades12.github.io/"
+            },
+        ]
+        }
+    </script>
 </head>
 
 <body>
