--- a/index/Mod_base/Jujutsu-kaisen.html
+++ b/index/Mod_base/Jujutsu-kaisen.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,7 @@
     <link rel="icon" href="index/favicon.ico" type="image/x-icon">
     <link rel="icon" href="index/favicon2.webp" type="image/webp">
     <link rel="canonical" href="https://crades12.github.io/">
-            <script type="application/ld+json" >
+    <script type="application/ld+json">
         {
         "@context":"https://crades12.github.io/",
         "@type":"BreadcrumbList",
@@ -33,18 +34,30 @@
             },
         ]
         }
+</script>
 </head>
+
 <body>
-    <header><h1>Jujutsu kaisen</h1></header>
+    <header>
+        <h1>Jujutsu kaisen</h1>
+    </header>
     <img src="jjk.webp" alt="">
-            <hr>
-        <a href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="jujutsu-craft.html">Jujutsu Craft</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Jujutsu-kaisen.html">Jujutsu kaisen</a>
-        <hr>
+    <hr>
+    <a href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
+        href="jujutsu-craft.html">Jujutsu Craft</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
+        href="Jujutsu-kaisen.html">Jujutsu kaisen</a>
+    <hr>
     <main>
         <h2>¿Que es?</h2>
         <p>Jujutsu kaisen una serie de manga japonés escrita e ilustrada por <a href="GGA.html">Gege Akutami</a>.</p>
-        <p>En este universo todos los seres vivos emanan una energía llamada Energía Maldita, que brota de las emociones negativas que fluyen naturalmente por el cuerpo. Las personas normales no tienen la habilidad de controlar este flujo en sus cuerpos. Como resultado, liberan continuamente esta Energía Maldita, lo que da lugar a que surjan las Maldiciones, una raza de seres espirituales cuyo principal deseo es el de hacerle daño a la humanidad.Para defenderla existen los hechizores, humanos con la capacidad de manejar la energia maldita y crear tecnicas poderosas. </p>
+        <p>En este universo todos los seres vivos emanan una energía llamada Energía Maldita, que brota de las emociones
+            negativas que fluyen naturalmente por el cuerpo. Las personas normales no tienen la habilidad de controlar
+            este flujo en sus cuerpos. Como resultado, liberan continuamente esta Energía Maldita, lo que da lugar a que
+            surjan las Maldiciones, una raza de seres espirituales cuyo principal deseo es el de hacerle daño a la
+            humanidad.Para defenderla existen los hechizores, humanos con la capacidad de manejar la energia maldita y
+            crear tecnicas poderosas. </p>
     </main>
     <footer></footer>
 </body>
+
 </html>
