--- a/index/Mod_base/jujutsu-craft.html
+++ b/index/Mod_base/jujutsu-craft.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,7 @@
     <link rel="icon" href="index/favicon.ico" type="image/x-icon">
     <link rel="icon" href="index/favicon2.webp" type="image/webp">
     <link rel="canonical" href="https://crades12.github.io/">
-            <script type="application/ld+json" >
+    <script type="application/ld+json">
         {
         "@context":"https://crades12.github.io/",
         "@type":"BreadcrumbList",
@@ -24,30 +25,42 @@
                 "position":2,
                 "name":"Jujutsu Craft",
                 "item":"https://crades12.github.io/index/Mod_base/jujutsu-craft.html"
-            },
+            }
         ]
         }
+        </script>
 </head>
+
 <body>
     <header>
         <h1>Jujutsu craft</h1>
         <img src="jjc.webp" alt="">
         <hr>
-        <a href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="jujutsu-craft.html">Jujutsu Craft</a>
+        <a href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
+            href="jujutsu-craft.html">Jujutsu Craft</a>
         <hr>
     </header>
     <main>
         <h2>¿Que es?</h2>
-        <p>Jujutsu craft es un mod sin ánimo de lucro, creado por los fanáticos, creado para el disfrute de la comunidad, esta basado en el famoso anime <a href="Jujutsu-kaisen.html">Jujutsu kaisen</a>.</p>
+        <p>Jujutsu craft es un mod sin ánimo de lucro, creado por los fanáticos, creado para el disfrute de la
+            comunidad, esta basado en el famoso anime <a href="Jujutsu-kaisen.html">Jujutsu kaisen</a>.</p>
         <h2>Transformación</h2>
         <p>Jujutsu Craft Mod transforma tu mundo de Minecraft en un dominio peligroso infestado de espíritus malditos.
 
-    Contenido Vasto: Más de 150 tipos de Espíritus Malditos y Hechiceros de Jujutsu aparecen como entidades. Más de 30 herramientas cursadas únicas diversificarán aún más su estilo de combate.
-    Técnicas Master Cursed: Los jugadores pueden elegir entre más de 40 diferentes Técnicas Malditas. ¡Elige tu favorito y libera su verdadero poder!
-    Batallas estratégicas: Participa en emocionantes batallas contra los espíritus malditos y los usuarios malditos con un sistema de combate profundo que utiliza habilidades, custodia y retroceso.
-    Crecimiento y Evolución: Reúne "Fama" exorcizando a los Espíritus Malditos para elevar tu rango como Hechicero de Jujutsu. A medida que su rango aumenta, sus estadísticas se mejorarán, y se desbloquearán técnicas más poderosas y técnicas malditas.
-    Adquirir Ultimate Jujutsu: Al cumplir con condiciones específicas, puede dominar técnicas icónicas de la serie original, como "Expansión de dominio", "Técnica de maldición inversa" y "Dominio simple", con el objetivo de convertirse en un verdadero brujo de Jujutsu de grado especial.</p>
+            Contenido Vasto: Más de 150 tipos de Espíritus Malditos y Hechiceros de Jujutsu aparecen como entidades. Más
+            de 30 herramientas cursadas únicas diversificarán aún más su estilo de combate.
+            Técnicas Master Cursed: Los jugadores pueden elegir entre más de 40 diferentes Técnicas Malditas. ¡Elige tu
+            favorito y libera su verdadero poder!
+            Batallas estratégicas: Participa en emocionantes batallas contra los espíritus malditos y los usuarios
+            malditos con un sistema de combate profundo que utiliza habilidades, custodia y retroceso.
+            Crecimiento y Evolución: Reúne "Fama" exorcizando a los Espíritus Malditos para elevar tu rango como
+            Hechicero de Jujutsu. A medida que su rango aumenta, sus estadísticas se mejorarán, y se desbloquearán
+            técnicas más poderosas y técnicas malditas.
+            Adquirir Ultimate Jujutsu: Al cumplir con condiciones específicas, puede dominar técnicas icónicas de la
+            serie original, como "Expansión de dominio", "Técnica de maldición inversa" y "Dominio simple", con el
+            objetivo de convertirse en un verdadero brujo de Jujutsu de grado especial.</p>
     </main>
     <footer></footer>
 </body>
+
 </html>
