--- a/index/Clanes/Clanes.html
+++ b/index/Clanes/Clanes.html
@@ -12,9 +12,10 @@
 
 <body>
     <header>
-        <a href="../../index.html">⬅️INICIO</a>
-        <hr>
         <h1>Clanes</h1>
+        <hr>
+        <a class="pan" href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="pan" href="Clanes.html">Clanes</a>
         <hr>
         <nav> <a href="#clanes">Clanes:</a>
             <ul>
