--- a/index/Extensiones/Extension-geto/Extension-geto.html
+++ b/index/Extensiones/Extension-geto/Extension-geto.html
@@ -11,13 +11,13 @@
 </head>
 
 <body>
-    <a href="../../../index.html">⬅️INICIO</a>
-    <a href="../Extensiones.html">⬅️Atras</a>
-    <hr>
     <header>
         <h1>Geto</h1>
         <hr>
-        <figure><img src="" alt="Imagen de Mahoraga de jujutsu kaisen"></figure>
+        <figure><img src="" alt="Imagen de Geto de jujutsu kaisen"></figure>
+        <hr>
+        <a class="pan" href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="pan" href="../Extensiones.html">Extensión</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="pan" href="Extension-geto.html">Geto</a>
+        <hr>
     </header>
 
 
