--- a/index/Extensiones/Extension-hakari/Extension-hakari.html
+++ b/index/Extensiones/Extension-hakari/Extension-hakari.html
@@ -9,12 +9,11 @@
     <title>Extension-hakari</title>
 </head>
 <body>
-    <a href="../../../index.html">⬅️INICIO</a>
-    <a href="../Extensiones.html">⬅️Atras</a>
-    <hr>
     <header><h1>Hakari Kinji</h1>
-    <hr>
     <figure><img src="hakari.webp" alt="Imagen de hkri de jujutsu kaisen"></figure>
+        <hr>
+        <a class="pan" href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="pan" href="../Extensiones.html">Extensión</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a  class="pan" href="Extension-hakari.html">Hakari</a>
+        <hr>
     </header>
     
     
@@ -28,10 +27,10 @@
         <hr>
         <p>-Extras</p>
         <ul>
-            <li>Lograr el jackpot de manera consecutiva acumula suerte.
+            <li>Lograr el <a href="Jackpot.html">jackpot</a> de manera consecutiva acumula suerte.
                 Cuanta más suerte tenga el usuario más fácil serálograrun jackpot. Lograr un jackpot elimina el enfriamiento de las habilidades
             </li>
-            <li>Con el clan hakari, el tiempo del jackpot aumenta a 4 minutos y 11 segundos</li>
+            <li>Con el clan hakari, el tiempo del <a href="Jackpot.html">Jackpot</a> aumenta a 4 minutos y 11 segundos</li>
         </ul>
         <hr>
     </main>
