--- a/index/Extensiones/Extension-ishigori/Extension-Ishigori.html
+++ b/index/Extensiones/Extension-ishigori/Extension-Ishigori.html
@@ -10,11 +10,11 @@
     
 </head>
 <body>
-    <a href="../../../index.html">⬅️INICIO</a>
-    <a href="../Extensiones.html">⬅️Atras</a>
-    <hr>
-    <header><h1>Ryu Ishigori</h1></header><hr>
-    <figure><img src="Ishigori.webp" alt="Imagen de toge inumaki"></figure>
+    <header><h1>Ryu Ishigori</h1>
+    <figure><img src="Ishigori.png" alt="Imagen de toge inumaki"></figure>
+            <hr>
+        <a class="pan" href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="pan" href="../Extensiones.html">Extensión</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a  class="pan" href="Extension-Ishigori.html">Ishigori</a>
+        <hr></header>
     <main>
         <h2>
             Descripción
