--- a/index/Extensiones/Extension-mahoraga/Extension-Mahoraga.html
+++ b/index/Extensiones/Extension-mahoraga/Extension-Mahoraga.html
@@ -9,13 +9,12 @@
     <title>Extension-Mahoraga</title>
 </head>
 <body>
-    <a href="../../../index.html">⬅️INICIO</a>
-    <a href="../Extensiones.html">⬅️Atras</a><hr>
     <header><h1>Mahoraga</h1><hr>
     <figure><img src="mahoraga.webp" alt="Imagen de Mahoraga de jujutsu kaisen"></figure>
+            <hr>
+        <a class="pan" href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="pan" href="../Extensiones.html">Extensión</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="pan" href="Extension-Mahoraga.html">Mahoraga</a>
+        <hr>
     </header>
-    
-    
     <main>
         <h2>
             Descripción
