--- a/index/Extensiones/Extensiones.html
+++ b/index/Extensiones/Extensiones.html
@@ -20,6 +20,9 @@
                 <li><a href="../Paginas/Paginas-aliadas.html">PAGINAS AMIGAS</a></li>
             </ul>
         </nav>
+        <hr>
+        <a href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Extensiones.html">Extensión</a>
+        <hr>
     </header>
     <main>
         <table>
@@ -47,14 +50,14 @@
                 <tr>
                     <td>
                         <figure><a href="Extension-ishigori/Extension-Ishigori.html">
-                                <img src="Extension-ishigori/Ishigori.webp" alt="Imagen de ishigori">
+                                <img src="Extension-ishigori/Ishigori.png" alt="Imagen de ishigori">
                                 <figcaption>Extensión de ishigori</figcaption>
                             </a>
                         </figure>
                     </td>
                     <td>
                         <figure><a href="Extension-itadori/Extension-Itadori.html">
-                                <img src="Extension-itadori/itadori.webp" alt="Imagen de itadori">
+                                <img src="Extension-itadori/itadori.png" alt="Imagen de itadori">
                                 <figcaption>Extensión de itadori</figcaption>
                             </a>
                         </figure>
