--- a/index/Extensiones/Extesion-higuruma/Extension-Clan-de-Higuruma.html
+++ b/index/Extensiones/Extesion-higuruma/Extension-Clan-de-Higuruma.html
@@ -9,15 +9,12 @@
     <title>Extension-higuruma</title>
 </head>
 <body>
-    <a href="../../../index.html">⬅️INICIO</a>
-    <a href="../Extensiones.html">⬅️Atras</a>
-    <hr>
     <header><h1>Hiromi Higuruma</h1>
     <figure><img src="higu.webp" alt="Imagen de Higuruma de jujutsu kaisen"></figure>
-    <hr>
+            <hr>
+        <a class="pan" href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="pan" href="../Extensiones.html">Extensión</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="pan" href="Extension-Clan-de-Higuruma.html">Higuruma</a>
+        <hr>
     </header>
-    
-    <hr>
     <main>
         <h2> 
             Descripción
