--- a/index/Extensiones/Extension-inumaki/Extension-inumaki.html
+++ b/index/Extensiones/Extension-inumaki/Extension-inumaki.html
@@ -10,11 +10,11 @@
     
 </head>
 <body>
-    <a href="../../../index.html">⬅️INICIO</a>
-    <a href="../Extensiones.html">⬅️Atras</a>
-    <hr>
     <header><h1>Toge Inumaki</h1></header><hr>
     <figure><img src="Imgen-toge-inumaki.webp" alt="Imagen de toge inumaki"></figure>
+            <hr>
+        <a class="pan" href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="pan" href="../Extensiones.html">Extensión</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="pan" href="Extension-inumaki.html">Inumaki</a>
+        <hr>
     <main>
         <h2>
             Descripción
@@ -23,8 +23,7 @@
         <img id="gif" src="Inumaki-Die_Extension_Compressed.gif" alt="Uso de la tecnica de Die">
         <hr>
     </main>
-    <footer><a href="../../../index.html">⬅️INICIO</a>
-    <a href="../Extensiones.html">⬅️Atras</a>
+    <footer>
 &copy;Abel González</footer>
 </body>
 </html>
