--- a/index/Extensiones/Extension-itadori/Extension-Itadori.html
+++ b/index/Extensiones/Extension-itadori/Extension-Itadori.html
@@ -9,14 +9,12 @@
     <title>Extension-Itadori</title>
 </head>
 <body>
-    <a href="../../../index.html">⬅️INICIO</a>
-    <a href="../Extensiones.html">⬅️Atras</a>
-    <hr>
     <header><h1>Yuji Itadori</h1><hr>
-    <figure><img src="itadori.webp" alt="Imagen de Higuruma de jujutsu kaisen"></figure>
+    <figure><img src="itadori.png" alt="Imagen de Higuruma de jujutsu kaisen"></figure>
+            <hr>
+        <a class="pan" href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="pan" href="../Extensiones.html">Extensión</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="pan"href="Extension-Itadori.html"></a>
+        <hr>
     </header>
-    
-    
     <main>
         <h2> 
             Descripción
@@ -31,8 +29,7 @@
         </ul>
        <hr>
     </main>
-    <footer><a href="../../../index.html">⬅️INICIO</a>
-    <a href="../Extensiones.html">⬅️Atras</a>
+    <footer>
     &copy;Abel González
 </footer>
 </body>
