--- a/index/Mod_base/GGA.html
+++ b/index/Mod_base/GGA.html
@@ -11,30 +11,30 @@
     <link rel="canonical" href="https://crades12.github.io/">
         <script type="application/ld+json" >
         {
-        "@context":"https://crades12.github.io/",
-        "@type":"BreadcrumbList",
+        "@context" : "https://crades12.github.io/",
+        "@type" : "BreadcrumbList",
         "itemListElement":[
              {
-                "@type":"Listlitem",
+                "@type":"ListlItem",
                 "position":1,
                 "name":"Inicio",
                 "item":"https://crades12.github.io/"
             },
             {
-                "@type":"Listlitem",
+                "@type":"ListlItem",
                 "position":2,
                 "name":"Jujutsu Craft",
                 "item":"https://crades12.github.io/index/Mod_base/jujutsu-craft.html"
             },
             {
-                "@type":"Listlitem",
+                "@type":"ListlItem",
                 "position":3,
                 "name":"Jujutsu kaisen",
                 "item":"https://crades12.github.io/index/Mod_base/Jujutsu-kaisen.html"
             },
            
             {
-                "@type":"Listlitem",
+                "@type":"ListlItem",
                 "position":4,
                 "name":"Gege akutami",
                 "item":"https://crades12.github.io/index/Mod_base/GGA.html"
