--- a/index/Mod_base/Jujutsu-kaisen.html
+++ b/index/Mod_base/Jujutsu-kaisen.html
@@ -15,19 +15,19 @@
         "@type":"BreadcrumbList",
         "itemListElement":[
              {
-                "@type":"Listlitem",
+                "@type":"ListlItem",
                 "position":1,
                 "name":"Inicio",
                 "item":"https://crades12.github.io/"
             },
             {
-                "@type":"Listlitem",
+                "@type":"ListlItem",
                 "position":2,
                 "name":"Jujutsu Craft",
                 "item":"https://crades12.github.io/index/Mod_base/jujutsu-craft.html"
             },
             {
-                "@type":"Listlitem",
+                "@type":"ListlItem",
                 "position":3,
                 "name":"JUjutsu kaisen",
                 "item":"https://crades12.github.io/index/Mod_base/Jujutsu-kaisen.html"
