--- a/index/Mod_base/Jujutsu-kaisen.html
+++ b/index/Mod_base/Jujutsu-kaisen.html
@@ -15,13 +15,13 @@
         "@type":"BreadcrumbList",
         "itemListElement":[
              {
-                "@type":"ListlItem",
+                "@type":"ListItem",
                 "position":1,
                 "name":"Inicio",
                 "item":"https://crades12.github.io/"
             },
             {
-                "@type":"ListlItem",
+                "@type":"ListItem",
                 "position":2,
                 "name":"Jujutsu Craft",
                 "item":"https://crades12.github.io/index/Mod_base/jujutsu-craft.html"
