--- a/index/Mod_base/GGA.html
+++ b/index/Mod_base/GGA.html
@@ -34,7 +34,7 @@
             },
            
             {
-                "@type":"ListlItem",
+                "@type":"ListItem",
                 "position":4,
                 "name":"Gege akutami",
                 "item":"https://crades12.github.io/index/Mod_base/GGA.html"
