--- a/index/Mod_base/Jujutsu-kaisen.html
+++ b/index/Mod_base/Jujutsu-kaisen.html
@@ -27,11 +27,11 @@
                 "item":"https://crades12.github.io/index/Mod_base/jujutsu-craft.html"
             },
             {
-                "@type":"ListlItem",
+                "@type":"ListItem",
                 "position":3,
                 "name":"JUjutsu kaisen",
                 "item":"https://crades12.github.io/index/Mod_base/Jujutsu-kaisen.html"
-            },
+            }
         ]
         }
 </script>
