--- a/index/Mod_base/GGA.html
+++ b/index/Mod_base/GGA.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="https://crades12.github.io/">
         <script type="application/ld+json" >
         {
-        "@context" : "https://crades12.github.io/",
+        "@context" : "https://schema.org",
         "@type" : "BreadcrumbList",
         "itemListElement":[
              {
