--- a/index/Mod_base/jujutsu-craft.html
+++ b/index/Mod_base/jujutsu-craft.html
@@ -36,8 +36,7 @@
         <h1>Jujutsu craft</h1>
         <img src="jjc.webp" alt="">
         <hr>
-        <a class="pan" href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
-           class="pan" href="jujutsu-craft.html">Jujutsu Craft</a>
+        <a class="pan" href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span>Jujutsu craft</span>
         <hr>
     </header>
     <main>
