--- a/index/Mod_base/Jujutsu-kaisen.html
+++ b/index/Mod_base/Jujutsu-kaisen.html
@@ -44,8 +44,7 @@
     <img src="jjk.webp" alt="">
     <hr>
     <a  class="pan"  href="../../index.html">Inicio</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
-      class="pan" href="jujutsu-craft.html">Jujutsu Craft</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
-         class="pan" href="Jujutsu-kaisen.html">Jujutsu kaisen</a>
+      class="pan" href="jujutsu-craft.html">Jujutsu Craft</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span>Jujutsu kaisen</span>
     <hr>
     <main>
         <h2>¿Que es?</h2>
