--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="canonical" href="https://crades12.github.io/">
     <script type="application/ld+json" >
         {
-        "@context":"https://crades12.github.io/",
+        "@context":"http://schema.org",
         "@type":"BreadcrumbList",
         "itemListElement":[
             {
@@ -32,10 +32,48 @@
                 "position":1,
                 "name":"Inicio",
                 "item":"https://crades12.github.io/"
-            },
+            }
         ]
         }
     </script>
+    <script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Article",
+  "headline": "Extensiones",
+  "author": {
+    "@type": "Person",
+    "name": "Abel González"
+  },
+  "image": "https://crades12.github.io/index/logro-extension.webp"
+}
+</script>
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Article",
+  "headline": "¿Que es?",
+    "author": {
+    "@type": "Person",
+    "name": "Abel"
+  },
+  "image": "https://crades12.github.io/index/Mod_base/jjc.webp",
+  "articleBody": "Jujutsu craft es un mod sin ánimo de lucro, creado por los fanáticos, creado para el disfrute de la comunidad, esta basado en el famoso anime (Jujutsu kaisen)."
+}
+</script>
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Article",
+  "headline": "Transformación",
+  "author": {
+    "@type": "Person",
+    "name": "Abel"
+  },
+  "image": "https://crades12.github.io/index/Mod_base/jjc.webp",
+  "articleBody": "Jujutsu Craft Mod transforma tu mundo de Minecraft en un dominio peligroso infestado de espíritus malditos.\n\n            Contenido Vasto: Más de 150 tipos de Espíritus Malditos y Hechiceros de Jujutsu aparecen como entidades. Más\n            de 30 herramientas cursadas únicas diversificarán aún más su estilo de combate.\n            Técnicas Master Cursed: Los jugadores pueden elegir entre más de 40 diferentes Técnicas Malditas. ¡Elige tu\n            favorito y libera su verdadero poder!\n            Batallas estratégicas: Participa en emocionantes batallas contra los espíritus malditos y los usuarios\n            malditos con un sistema de combate profundo que utiliza habilidades, custodia y retroceso.\n            Crecimiento y Evolución: Reúne &quot;Fama&quot; exorcizando a los Espíritus Malditos para elevar tu rango como\n            Hechicero de Jujutsu. A medida que su rango aumenta, sus estadísticas se mejorarán, y se desbloquearán\n            técnicas más poderosas y técnicas malditas.\n            Adquirir Ultimate Jujutsu: Al cumplir con condiciones específicas, puede dominar técnicas icónicas de la\n            serie original, como &quot;Expansión de dominio&quot;, &quot;Técnica de maldición inversa&quot; y &quot;Dominio simple&quot;, con el\n            objetivo de convertirse en un verdadero brujo de Jujutsu de grado especial."
+}
+</script>
 </head>
 
 <body>
